--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,19 @@
-Makefile*
-bin
-cnf
-config.log
-zips
+chap*.txt
+manual.six
+fr.tex
+fr.aux
+fr.bbl
+fr.blg
+fr.brf
+fr.idx
+fr.ilg
+fr.ind
+fr.log
+fr.out
+fr.pnr
+fr.toc
+fr.xml
+frbib.xml
+frbib.xml.bib
+.git
+.gitignore
